# sunlight-tracker

./: .gitignore  README.md  create_geometry.ipynb  get_geometry.py  get_lat_long_google.ipynb  main.ipynb  pyproject.toml  run.py
.ipynb_checkpoints/: create_geometry-checkpoint.ipynb
geometry/: box.stl  fences.stl  plane.stl  tree.stl
old/: Untitled.ipynb  create_geometry.ipynb  main.ipynb
static/: combined_mesh.json  combined_mesh.stl  output.gltf  output.vtk  rbs.json
sunlight_web_app/: main.py  main_.py
templates/: index.html  result.html
